# aegis

./: .env.example  .gitignore  DOCUMENTATION.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
aegis/: .env.example  README.md  setup.py
aegis/agent/: investigator.py
aegis/control_plane/: controller.py  detectors.py
aegis/data_plane/: __init__.py
aegis/eval/: __init__.py  scenarios.py
aegis/ui/: streamlit_app.py
aegis/validation/: label_free.py
agent/: __init__.py  investigation_agent.py
api/: main.py
artifacts/: .gitkeep
config/: __init__.py  config.yaml  settings.py
core/: __init__.py  monitor.py
data/: .gitkeep
deployment/: __init__.py  verification.py
drift_detection/: __init__.py  concept_drift.py  data_drift.py
examples/: advanced_usage.py  api_usage.py  basic_usage.py
retraining/: __init__.py  retraining_pipeline.py
src/aegis/: __init__.py  config.py  system.py
src/aegis/agent/: __init__.py  investigator.py  tools.py
src/aegis/control_plane/: __init__.py  controller.py  detectors.py  monitor.py  remediation.py  risk_gate.py
src/aegis/data_plane/: drift_injector.py  replayer.py  serving.py
src/aegis/eval/: scoreboard.py
src/aegis/orchestration/: __init__.py  graph.py
src/aegis/reasoning/: __init__.py  base.py  gemini.py  local.py
src/aegis/stores/: __init__.py  incidents.py  metrics.py  registry.py
storage/: __init__.py  database.py
tests/: conftest.py  test_controller.py  test_deploy_gate_integration.py  test_label_free.py  test_monitor.py  test_orchestration.py  test_read_write_split.py  test_risk_gate.py  test_system.py
(+5 files in other folders)
